fixtures/valid/transform-binary-expression/input.js
translator.trans('Some ' + 'key' + '');
translator.trans('Other ' + 'key');
translator.trans('Next ' + 'key');
translator.trans('Multiple' + ' string' + ' expressions' + ' in' + ' row');

