fixtures/invalid/translator-not-trans-method/input.js
translator.test('Some ' + 'key');
translator.a('Other ' + 'key');
translator.b('Next ' + 'key');
